# LambdaDesigner-sample

./: LambdaDesigner-sample.cabal  README.md  stack.yaml
TD/: LambdaDesigner.toe
TD/scripts/: hooks.py  scripts.py
app/: Main.hs
