name:                LambdaDesigner-sample
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ulyssesp/LambdaDesigner-sample
license:             BSD3
license-file:        LICENSE
author:              Ulysses Popple
maintainer:          ulysses.popple@gmail.com
copyright:           2017 Ulysses Popple
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable LambdaDesigner-sample-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , LambdaDesigner-sample
                     , LambdaDesigner
  default-language:    Haskell2010

test-suite LambdaDesigner-sample-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , LambdaDesigner-sample
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ulyssesp/LambdaDesigner-sample
